2005-01-29 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py (GraphVizDialog.__init__):
	Use proper response ID;  (GraphVizGraphics.__init__): set up self.doc;
	(EmptyDoc.init): Add empty method.

	* src/ArgHandler.py: Support for opening in the command-line mode.
	* src/const.py.in: Add -O | --open option.

2005-01-29 Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py:
	  - Added support for Don's Pie charts + color styles for it
	  - Added bar_items option to decide when Report is going to use
	    Bar charts and when Pie charts

2005-01-29 Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py:
	  - Add first versions of following statistics:
	    - Child counts
	    - Marriage places
	    - Marriage ages
	    - Ages when first child was born
	    - Ages when last child was born
	  - Added a note that children can be either biological or adopted
	    (this relation can be gotten easily/fast only when going from child
	     to parents, not when going from parent to children like I need to)
	  - Take advantage of Don's age calculations function
	    -> Remove "Estimate" from the age descriptions
	  - Convert ages to correctly sortable strings
	  - Add a few TODO notes

2005-01-28 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PedView.py: Fix remnants of gnome.canvas syntax.
	* src/ReadGrdb.py: Add to CVS: native database importer.
	* src/DbPrompter.py: Support for the native importer.
	* src/Errors.py: Add HandleError exception for duplicate handles.

	* src/ArgHandler.py: Support for the native importer.
	* NEWS: Update.

2005-01-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: gnome.vfs vs. gnomevfs, tolerence 
	* src/GrampsMime.py: gnome.vfs vs. gnomevfs tolerence 
	* src/ImageSelect.py: gnome.canvas vs. gnomecanvas tolerence 
	* src/NameDisplay.py: gnome.vfs vs. gnomevfs tolerence 
	* src/PedView.py: gnome.canvas vs. gnomecanvas tolerence 
	* src/Utils.py: remove mime handling, use GrampsMime