@@ -6,6 +6,11 @@
 	* src/ArgHandler.py: Support for opening in the command-line mode.
 	* src/const.py.in: Add -O | --open option.
 
+	* src/WriteGrdb.py: Add to CVS.
+	* src/gramps.glade: Add Save as item, switch former one to Export.
+	* src/gramps_main.py: Support for save as.
+	* src/DbPrompter.py: Support for save as.
+
 2005-01-29 Eero Tamminen <eerot@sf>
 	* src/plugins/StatisticsChart.py:
 	  - Added support for Don's Pie charts + color styles for it
